[package]
name = "mc-common"
version = "1.1.2"
authors = ["MobileCoin"]
edition = "2018"

[features]
default = []
std = [
    "displaydoc/std",
    "mc-util-serial/std",
]
log = [
    "backtrace",
    "chrono",
    "mc-util-logger-macros",
    "slog-scope",
]
loggers = [
    # Features
    "log",
    "std",

    # Dependencies
    "hostname",
    "lazy_static",
    "mc-util-build-info",
    "sentry",
    "slog-async",
    "slog-atomic",
    "slog-envlogger",
    "slog-gelf",
    "slog-json",
    "slog-stdlog",
    "slog-term",
]

[dependencies]
cfg-if = "0.1"
mc-crypto-digestible = { path = "../crypto/digestible" }
displaydoc = { version = "0.2", default-features = false }
hashbrown = { version = "0.6", default-features = false, features = ["serde", "nightly"] }
mc-crypto-keys = { path = "../crypto/keys", default-features = false }
mc-crypto-rand = { path = "../crypto/rand" }
# Note: mc-util-serial is an unused dependency, but anywhere we forward serde/std, we need to get rmp-serde/std also, or the build breaks.
mc-util-serial = { path = "../util/serial", default-features = false }

binascii = "0.1.2"
hex_fmt = "0.3"
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
sha3 = { version = "0.9", default-features = false }
siphasher = "0.3"

# log- and loggers-only dependencies
backtrace = { version = "0.3", optional = true }
chrono = { version = "0.4", optional = true }
mc-util-logger-macros = { path = "../util/logger-macros", optional = true }
slog = { version = "2.7", default-features = false, features = ["dynamic-keys", "max_level_trace", "release_max_level_trace"] }
slog-scope = { version = "4.1.2", optional = true }

# loggers-only dependencies
hostname = { version = "0.1", optional = true }
lazy_static = { version = "1.4", optional = true }
mc-util-build-info = { path = "../util/build/info", optional = true }
sentry = { version = "0.18", optional = true, default-features = false, features = ["with_client_implementation", "with_reqwest_transport", "with_panic", "with_failure", "with_device_info", "with_rust_info", "with_rustls"] }
slog-async = { version = "2.3", optional = true }
slog-atomic = { version = "3.0", optional = true }
slog-envlogger = { version = "2.1", optional = true }
slog-gelf = { version = "0.1", optional = true }
slog-json = { version = "2.3", optional = true }
slog-stdlog = { version = "4.1.0", optional = true }
slog-term = { version = "2.6", optional = true }

[dev-dependencies]
scoped_threadpool = "0.1.*"

[dev-dependencies.proptest]
version = "0.10" # Only works for 0.9.1 or newer
default-features = false
# Enable all default features not known to break code coverage builds
features = ["default-code-coverage"]
