[package]
name = "mc-common"
version = "2.0.0"
authors = ["MobileCoin"]
edition = "2018"

[features]
default = []
std = [
    "displaydoc/std",
    "mc-util-serial/std",
]
log = [
    "backtrace",
    "chrono",
    "mc-util-logger-macros",
    "slog-scope",
]
loggers = [
    # Features
    "log",
    "std",

    # Dependencies
    "hostname",
    "lazy_static",
    "mc-util-build-info",
    "sentry",
    "slog-async",
    "slog-atomic",
    "slog-envlogger",
    "slog-gelf",
    "slog-json",
    "slog-stdlog",
    "slog-term",
]

[dependencies]
mc-crypto-digestible = { path = "../crypto/digestible" }
mc-crypto-keys = { path = "../crypto/keys", default-features = false }
mc-crypto-rand = { path = "../crypto/rand" }
# loggers-only dependencies
mc-util-build-info = { path = "../util/build/info", optional = true }
# log- and loggers-only dependencies
mc-util-logger-macros = { path = "../util/logger-macros", optional = true }
# Note: mc-util-serial is an unused dependency, but anywhere we forward serde/std, we need to get rmp-serde/std also, or the build breaks.
mc-util-serial = { path = "../util/serial", default-features = false }

backtrace = { version = "0.3", optional = true }
binascii = "0.1.4"
cfg-if = "1.0"
chrono = { version = "0.4", optional = true }
displaydoc = { version = "0.2", default-features = false }
hashbrown = { version = "0.12.1", default-features = false, features = ["serde", "nightly"] }
hex_fmt = "0.3"
hostname = { version = "0.3.1", optional = true }
lazy_static = { version = "1.4", optional = true }
rand_core = { version = "0.6", default-features = false }
sentry = { version = "0.25", optional = true, default-features = false, features = ["backtrace", "contexts", "log", "panic", "reqwest", "rustls", "serde_json", "slog"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
sha3 = { version = "0.10", default-features = false }
siphasher = "0.3"
slog = { version = "2.7", default-features = false, features = ["dynamic-keys", "max_level_trace", "release_max_level_trace"] }
slog-async = { version = "2.7", optional = true }
slog-atomic = { version = "3.1", optional = true }
slog-envlogger = { version = "2.2", optional = true }
slog-gelf = { version = "0.1", optional = true }
slog-json = { version = "2.6", optional = true }
slog-scope = { version = "4.4.0", optional = true }
slog-stdlog = { version = "4.1.1", optional = true }
slog-term = { version = "2.9", optional = true }

[dev-dependencies]
proptest = { version = "1.0", default-features = false, features = ["default-code-coverage"] }
scoped_threadpool = "0.1.*"
