[package]
name = "mc-connection"
version = "5.2.3"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]

der = "0.7.8"
mc-attest-ake = { path = "../attest/ake" }
mc-attest-api = { path = "../attest/api" }
mc-attest-core = { path = "../attest/core" }
mc-attest-verifier = { path = "../attest/verifier" }
mc-blockchain-types = { path = "../blockchain/types" }
mc-common = { path = "../common" }
mc-consensus-api = { path = "../consensus/api" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-crypto-noise = { path = "../crypto/noise" }
mc-transaction-core = { path = "../transaction/core" }
mc-util-grpc = { path = "../util/grpc" }
mc-util-serial = { path = "../util/serial" }
mc-util-uri = { path = "../util/uri" }

aes-gcm = "0.10.3"
cookie = "0.18"
displaydoc = "0.2"
grpcio = "0.13"
mc-attestation-verifier = "0.4.2"
mc-rand = "1"
retry = "2.0"
secrecy = "0.8"
serde = "1.0"
sha2 = "0.10"

[dev-dependencies]
rand = "0.8"
rand_hc = "0.3"
