[package]
name = "copper-wasm"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[lib]
name = "copper_wasm"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
mc-account-keys = { path = "../account-keys" }
mc-api = { path = "../api" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-transaction-std = { path = "../transaction/std" }

getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
wasm-bindgen = "0.2"