[package]
name = "mc-core"
version = "5.0.5"
authors = ["MobileCoin"]
edition = "2021"
description = "MobileCoin Core Library"
license = "Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }

[features]
bip39 = ["dep:tiny-bip39", "dep:slip10_ed25519"]
internals = [ ]
serde = ["dep:serde", "mc-core-types/serde"]

default = ["bip39"]

[dependencies]
curve25519-dalek = { version = "4.0.0-rc.1", default-features = false }
ed25519-dalek = { version = "2.0.0-pre.0", default-features = false }
generic-array = { version = "0.14.4", default-features = false, features = [ "more_lengths" ] }
hkdf = { version = "0.12.3" }
serde = { version = "1.0", optional = true, default-features = false, features = [ "derive" ] }
sha2 = { version = "0.10.5", default-features = false }
slip10_ed25519 = { version = "0.1", optional = true }
tiny-bip39 = { version = "1.0", optional = true }
zeroize = { version = "1.5", default-features = false }

mc-core-types = { path = "./types", default-features = false }
mc-crypto-hashes = { path = "../crypto/hashes", default-features = false }
mc-crypto-keys = { path = "../crypto/keys", default-features = false }

[dev-dependencies]

anyhow = { version = "1.0.69" }
clap = { version = "4.1.11", features = [ "derive" ] }
hex = { version = "0.4.3", default-features = false }
lazy_static = { version = "1.4.0" }
rand_core = { version = "0.6.3", default-features = false }
serde = { version = "1.0.159", features = [ "derive" ] }
serde_json = { version = "1.0.94" }

mc-test-vectors-definitions = { path = "../test-vectors/definitions" }
mc-util-from-random = { path = "../util/from-random", default-features = false }
mc-util-test-vector = { path = "../util/test-vector" }
mc-util-test-with-data = { path = "../util/test-with-data" }

[[example]]
name = "slip10"
path = "examples/slip10.rs"
required-features = ["bip39"]
