[package]
name = "mc-enclave-boundary"
version = "4.0.2"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]
rand_core = { version = "0.6", default-features = false }

mc-common = { path = "../common", default-features = false }
mc-crypto-rand = { path = "../crypto/rand" }
mc-sgx-compat = { path = "../sgx/compat" }
mc-sgx-types = { path = "../sgx/types" }
