[package]
name = "libmobilecoin"
version = "1.1.0"
authors = ["MobileCoin"]
edition = "2018"

[lib]
name = "mobilecoin"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
# External dependencies
aes-gcm = "0.9.2"
displaydoc = "0.2"
libc = "0.2"
protobuf = "2.22.1"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.9.5"
slip10_ed25519 = "0.1.3"
tiny-bip39 = "0.8"
zeroize = "1.1"

# Lock a specific cmake version that plays nicely with iOS. Note that 0.1.45 does not actually do that,
# but there is an override to a specific commit of a currently-unreleased version in the root Cargo.toml.
# Once that version is released (presumably as 0.1.46) that override will no longer be necessary.
# Note: This is not used directly by this crate, but rather is a subdependency
cmake = "= 0.1.45"

# MobileCoin dependencies
mc-account-keys = { path = "../account-keys" }
mc-account-keys-slip10 = { path = "../account-keys/slip10" }
mc-api = { path = "../api" }
mc-attest-ake = { path = "../attest/ake" }
mc-attest-core = { path = "../attest/core" }
mc-common = { path = "../common", features = ["std"] }
mc-crypto-box = { path = "../crypto/box" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-crypto-noise = { path = "../crypto/noise" }
mc-crypto-rand = { path = "../crypto/rand", features = ["std"] }
mc-crypto-sig = { path = "../crypto/sig" }
mc-fog-kex-rng = { path = "../fog/kex_rng" }
mc-fog-report-validation = { path = "../fog/report/validation" }
mc-transaction-core = { path = "../transaction/core" }
mc-transaction-std = { path = "../transaction/std" }
mc-util-ffi = { path = "../util/ffi" }
mc-util-serial = { path = "../util/serial", features = ["std"] }
mc-util-uri = { path = "../util/uri" }

[dev-dependencies]
cbindgen = { version = "0.14" }
