[package]
name = "mcconnection"
version = "0.1.0"
authors = ["MobileCoin"]
edition = "2018"

[dependencies]
attest = { path = "../attest/core" }
attest-ake = { path = "../attest/ake" }
attest-api = { path = "../attest/api" }
common = { path = "../common" }
host-cert = { path = "../util/host-cert" }
keys = { path = "../crypto/keys" }
mcnoise = { path = "../crypto/ake/mcnoise" }
mcrand = { path = "../crypto/mcrand" }
mcserial = { path = "../util/mcserial" }
mcuri = { path = "../util/mcuri" }
mobilecoin-api = { path = "../consensus/api" }
transaction = { path = "../transaction/core" }

aes-gcm = "0.3"
failure = "0.1.5"
grpcio = "0.5.1"
retry = "0.5"
secrecy = "0.4"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
sha2 = "0.8"

[dev-dependencies]
rand = "0.7"
rand_hc = "0.2"
tempdir = "0.3"
