[package]
name = "mc-mint-auditor"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2018"

[[bin]]
name = "mc-mint-auditor"
path = "src/bin/main.rs"

[dependencies]
mc-account-keys = { path = "../account-keys" }
mc-common = { path = "../common", features = ["log", "loggers"] }
mc-ledger-db = { path = "../ledger/db" }
mc-mint-auditor-api = { path = "api" }
mc-transaction-core = { path = "../transaction/core" }
mc-util-grpc = { path = "../util/grpc" }
mc-util-lmdb = { path = "../util/lmdb" }
mc-util-parse = { path = "../util/parse" }
mc-util-serial = { path = "../util/serial" }

clap = { version = "3.1", features = ["derive", "env"] }
displaydoc = "0.2"
grpcio = "0.10.0"
lmdb-rkv = "0.14.0"
prost = { version = "0.10", default-features = false, features = ["prost-derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
mc-crypto-keys = { path = "../crypto/keys" }
mc-transaction-core-test-utils = { path = "../transaction/core/test-utils" }
mc-util-from-random = { path = "../util/from-random" }

protobuf = "2.22.1"
rand_core = "0.6"
rand_hc = "0.3"
tempfile = "3.2"
