[package]
name = "mc-mint-auditor"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[[bin]]
name = "mc-mint-auditor"
path = "src/bin/main.rs"

[dependencies]
mc-account-keys = { path = "../account-keys" }
mc-api = { path = "../api" }
mc-blockchain-types = { path = "../blockchain/types" }
mc-common = { path = "../common", features = ["log", "loggers"] }
mc-ledger-db = { path = "../ledger/db" }
mc-mint-auditor-api = { path = "api" }
mc-transaction-core = { path = "../transaction/core" }
mc-util-grpc = { path = "../util/grpc" }
mc-util-metrics = { path = "../util/metrics" }
mc-util-parse = { path = "../util/parse" }
mc-util-serial = { path = "../util/serial" }
mc-util-uri = { path = "../util/uri" }

clap = { version = "3.2", features = ["derive", "env"] }
# Override diesel dependency with our fork, to statically link SQLite.
diesel = { version = "1.4", features = ["sqlite-bundled", "r2d2"] }
diesel_migrations = { version = "1.4", features = ["sqlite"] }
displaydoc = "0.2"
grpcio = "0.10.2"
hex = "0.4"
hostname = "0.3.1"
lazy_static = "1.4"
prost = { version = "0.10", default-features = false, features = ["prost-derive"] }
protobuf = "2.27.1"
rayon = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "gzip", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.13"
toml = "0.5"
url = "2.2"

[dev-dependencies]
mc-blockchain-test-utils = { path = "../blockchain/test-utils" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-transaction-core-test-utils = { path = "../transaction/core/test-utils" }
mc-util-from-random = { path = "../util/from-random" }
mc-util-test-helper = { path = "../util/test-helper" }

protobuf = "2.27.1"
tempfile = "3.3"
