[package]
name = "mc-mobilecoind-json"
version = "1.1.2"
authors = ["MobileCoin"]
edition = "2018"

[[bin]]
name = "mobilecoind-json"
path = "src/bin/main.rs"

[dependencies]
mc-api = { path = "../api" }
mc-common = { path = "../common", features = ["loggers"] }
mc-mobilecoind-api = { path = "../mobilecoind/api" }
mc-util-grpc = { path = "../util/grpc" }

grpcio = "0.9.0"
hex = "0.4"
rocket = { version = "0.4.6", default-features = false }
rocket_contrib = { version = "0.4.6", default-features = false, features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
structopt = "0.3"
protobuf = "2.22.1"

[dev-dependencies]
mc-crypto-keys = { path = "../crypto/keys" }
mc-ledger-db = { path = "../ledger/db" }
mc-util-from-random = { path = "../util/from-random" }
mc-transaction-core = { path = "../transaction/core" }
mc-transaction-core-test-utils = { path = "../transaction/core/test-utils" }

rand = "0.8"

[build-dependencies]
# Even though this is unused, it needs to be here otherwise Cargo brings in some weird mixture of packages/features that refuses to compile.
# Go figure ¯\_(ツ)_/¯
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
