[package]
name = "mc-mobilecoind-json"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2018"

[[bin]]
name = "mobilecoind-json"
path = "src/bin/main.rs"

[dependencies]
mc-api = { path = "../api" }
mc-common = { path = "../common", features = ["loggers"] }
mc-mobilecoind-api = { path = "../mobilecoind/api" }
mc-util-grpc = { path = "../util/grpc" }

clap = { version = "3.1", features = ["derive", "env"] }
grpcio = "0.10.2"
hex = "0.4"
protobuf = "2.27.1"
rocket = { version = "0.4.10", default-features = false }
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_with = "1.12"

[dev-dependencies]
mc-crypto-keys = { path = "../crypto/keys" }
mc-ledger-db = { path = "../ledger/db" }
mc-transaction-core = { path = "../transaction/core" }
mc-transaction-core-test-utils = { path = "../transaction/core/test-utils" }
mc-util-from-random = { path = "../util/from-random" }

rand = "0.8"
