[package]
name = "mc-mobilecoind-json"
version = "1.2.0-pre0"
authors = ["MobileCoin"]
edition = "2018"

[[bin]]
name = "mobilecoind-json"
path = "src/bin/main.rs"

[dependencies]
mc-api = { path = "../api" }
mc-common = { path = "../common", features = ["loggers"] }
mc-mobilecoind-api = { path = "../mobilecoind/api" }
mc-util-grpc = { path = "../util/grpc" }

clap = { version = "3.1", features = ["derive", "env"] }
grpcio = "0.10.2"
hex = "0.4"
protobuf = "2.27.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
mc-crypto-keys = { path = "../crypto/keys" }
mc-ledger-db = { path = "../ledger/db" }
mc-transaction-core = { path = "../transaction/core" }
mc-transaction-core-test-utils = { path = "../transaction/core/test-utils" }
mc-util-from-random = { path = "../util/from-random" }

rand = "0.8"
