[package]
name = "mc-mobilecoind"
version = "1.1.2"
authors = ["MobileCoin"]
edition = "2018"

[[bin]]
name = "mobilecoind"
path = "src/bin/main.rs"

[features]
default = ["ip-check"]
ip-check = []

[dependencies]
mc-account-keys = { path = "../account-keys" }
mc-account-keys-slip10 = { path = "../account-keys/slip10" }
mc-api = { path = "../api" }
mc-attest-core = { path = "../attest/core" }
mc-common = { path = "../common", features = ["log"] }
mc-connection = { path = "../connection" }
mc-consensus-api = { path = "../consensus/api" }
mc-consensus-enclave-measurement = { path = "../consensus/enclave/measurement" }
mc-consensus-scp = { path = "../consensus/scp" }
mc-crypto-digestible = { path = "../crypto/digestible", features = ["derive"] }
mc-crypto-keys = { path = "../crypto/keys" }
mc-crypto-rand = { path = "../crypto/rand" }
mc-fog-report-connection = { path = "../fog/report/connection" }
mc-fog-report-validation = { path = "../fog/report/validation" }
mc-ledger-db = { path = "../ledger/db" }
mc-ledger-sync = { path = "../ledger/sync" }
mc-mobilecoind-api = { path = "../mobilecoind/api" }
mc-sgx-css = { path = "../sgx/css" }
mc-transaction-core = { path = "../transaction/core" }
mc-transaction-std = { path = "../transaction/std" }
mc-util-from-random = { path = "../util/from-random" }
mc-util-grpc = { path = "../util/grpc" }
mc-util-lmdb = { path = "../util/lmdb" }
mc-util-repr-bytes = { path = "../util/repr-bytes" }
mc-util-serial = { path = "../util/serial" }
mc-util-uri = { path = "../util/uri" }
mc-watcher = { path = "../watcher" }

aes-gcm = "0.9.2"
blake2 = { version = "0.9", default-features = false }
crossbeam-channel = "0.5"
displaydoc = "0.2"
grpcio = "0.9.0"
hex_fmt = "0.3"
lmdb-rkv = "0.14.0"
num_cpus = "1.12"
prost = { version = "0.6.1", default-features = false, features = ["prost-derive"] }
protobuf = "2.22.1"
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "gzip"] }
rand = "0.8"
rayon = "1.3"
retry = "1.2"
serde_json = "1.0"
structopt = "0.3"
tiny-bip39 = "0.8"

[dev-dependencies]
mc-common = { path = "../common", features = ["loggers"] }
mc-connection-test-utils = { path = "../connection/test-utils" }
mc-fog-report-validation = { path = "../fog/report/validation", features = ["automock"] }
mc-fog-report-validation-test-utils = { path = "../fog/report/validation/test-utils" }
mc-transaction-core-test-utils = { path = "../transaction/core/test-utils" }
mc-util-from-random = { path = "../util/from-random" }

hex = "0.4"
more-asserts = "0.2"
pem = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
tempdir = "0.3"

[build-dependencies]
# Resolves a build failure for the x86_64-apple-darwin target by overriding the grpcio libz dep, which is pinned to v1.0.25
libz-sys = "1.1.2"
