[package]
name = "mc-mobilecoind"
version = "5.2.3"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[[bin]]
name = "mobilecoind"
path = "src/bin/main.rs"

[features]
default = ["ip-check"]
ip-check = []
bypass-ip-check = []

[dependencies]
mc-account-keys = { path = "../account-keys" }
mc-api = { path = "../api" }
mc-attest-core = { path = "../attest/core" }
mc-blockchain-types = { path = "../blockchain/types" }
mc-common = { path = "../common", features = ["log"] }
mc-connection = { path = "../connection" }
mc-consensus-api = { path = "../consensus/api" }
mc-consensus-enclave-api = { path = "../consensus/enclave/api" }
mc-consensus-enclave-measurement = { path = "../consensus/enclave/measurement" }
mc-consensus-scp = { path = "../consensus/scp" }
mc-core = { path = "../core" }
mc-crypto-digestible = { path = "../crypto/digestible", features = ["derive"] }
mc-crypto-hashes = { path = "../crypto/hashes" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-crypto-ring-signature-signer = { path = "../crypto/ring-signature/signer" }
mc-fog-report-connection = { path = "../fog/report/connection" }
mc-fog-report-resolver = { path = "../fog/report/resolver" }
mc-fog-report-validation = { path = "../fog/report/validation" }
mc-ledger-db = { path = "../ledger/db" }
mc-ledger-migration = { path = "../ledger/migration" }
mc-ledger-sync = { path = "../ledger/sync" }
mc-mobilecoind-api = { path = "../mobilecoind/api" }
mc-rand = "1.0"
mc-sgx-css = { path = "../sgx/css" }
mc-transaction-builder = { path = "../transaction/builder" }
mc-transaction-core = { path = "../transaction/core" }
mc-transaction-extra = { path = "../transaction/extra" }
mc-util-from-random = { path = "../util/from-random" }
mc-util-grpc = { path = "../util/grpc" }
mc-util-lmdb = { path = "../util/lmdb" }
mc-util-parse = { path = "../util/parse" }
mc-util-repr-bytes = { path = "../util/repr-bytes" }
mc-util-serial = { path = "../util/serial" }
mc-util-telemetry = { path = "../util/telemetry", features = ["jaeger"] }
mc-util-uri = { path = "../util/uri" }
mc-watcher = { path = "../watcher" }
mc-watcher-api = { path = "../watcher/api" }

aes-gcm = "0.10.3"
clap = { version = "4.4", features = ["derive", "env"] }
crossbeam-channel = "0.5"
displaydoc = "0.2"
grpcio = "0.13"
hex_fmt = "0.3"
lmdb-rkv = "0.14.0"
mc-attestation-verifier = "0.4.2"
num_cpus = "1.16"
prost = { version = "0.12", default-features = false, features = ["prost-derive"] }
protobuf = "2.27.1"
rand = "0.8"
rayon = "1.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
retry = "2.0"
serde_json = "1.0"
tiny-bip39 = "1.0"

[dev-dependencies]
mc-blockchain-test-utils = { path = "../blockchain/test-utils" }
mc-common = { path = "../common", features = ["loggers"] }
mc-connection-test-utils = { path = "../connection/test-utils" }
mc-fog-report-validation = { path = "../fog/report/validation", features = ["automock"] }
mc-fog-report-validation-test-utils = { path = "../fog/report/validation/test-utils" }
mc-util-from-random = { path = "../util/from-random" }

hex = "0.4"
more-asserts = "0.3"
pem = "3.0"
portpicker = "0.1.1"
rand_chacha = "0.3"
rand_core = "0.6"
tempfile = "3.10"

[build-dependencies]
# Resolves a build failure for the x86_64-apple-darwin target by overriding the grpcio libz dep, which is pinned to v1.0.25
libz-sys = "1.1.15"
