[package]
name = "mc-peers"
version = "1.0.0"
authors = ["MobileCoin"]
edition = "2018"

[features]
test_utils = []

[dependencies]
mc-attest-api = { path = "../attest/api" }
mc-attest-enclave-api = { path = "../attest/enclave-api" }
mc-common = { path = "../common", features = ["log"] }
mc-connection = { path = "../connection" }
mc-consensus-api = { path = "../consensus/api" }
mc-consensus-enclave-api = { path = "../consensus/enclave/api" }
mc-consensus-scp = { path = "../consensus/scp" }
mc-crypto-digestible = { path = "../crypto/digestible" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-ledger-db = { path = "../ledger/db" }
mc-transaction-core = { path = "../transaction/core" }
mc-util-grpc = { path = "../util/grpc" }
mc-util-serial = { path = "../util/serial" }
mc-util-uri = { path = "../util/uri" }

crossbeam-channel = "0.4"
ed25519 = { version = "1.0.1", default-features = false, features = ["serde"] }
failure = "0.1.8"
grpcio = "0.6.0"
mockall = "0.7.2"
protobuf = "2.12"
retry = "0.5"
sha2 = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
url = "2.1"

[dev-dependencies]
mc-connection-test-utils = { path = "../connection/test-utils" }
mc-peers-test-utils = { path = "./test-utils" }

rand_hc = "0.2"
rand = "0.7"
