[package]
name = "mc-testnet-client"
version = "0.1.0"
authors = ["MobileCoin"]
edition = "2018"

[dependencies]
chrono = "0.4"
dialoguer = "0.5"
grpcio = "0.5.1"
hex = "0.4"
indicatif = "0.14"
protobuf = "2.12"
rust_decimal = { version = "1.4", default-features = false }
structopt = "0.3"

grpc-util = { path = "../util/grpc" }
mc-b58-payloads = { path = "../util/b58-payloads" }
mobilecoind-api = { path = "../mobilecoind/api" }
